Fix build in Docker targets
There are some inconveniences when building in container and writing in
shared volume. The biggest of those are that by doing that the resulting
target directory is owned by root and in some rare cases - you end up
with unnecessary files in the target directory. To solve that the
project files are copied in the container and not mounted and the target
directory is copied back to the host when the build finishes.

--- a/Makefile.docker
+++ b/Makefile.docker
@@ -4,7 +4,19 @@ PROJECTROOT=$(shell pwd)
 # The name for the docker builder image
 BUILDER_CONTAINER_NAME="milagro-crypto/amcl-builder"
 
-make = docker run --rm -v $(PROJECTROOT):/src -w /src --user `id -u` -e WINEPREFIX=/tmp/.wine $(BUILDER_CONTAINER_NAME) sh -c "mkdir -p /tmp/.wine && make $1"
+define make
+	rm -rf target
+	docker create \
+		--env WINEPREFIX=/tmp/.wine \
+		--name builder \
+		--workdir /src \
+		$(BUILDER_CONTAINER_NAME) sh -c "mkdir -p /tmp/.wine && make $1"
+	docker cp . builder:/src
+	-docker start -ai builder
+	docker cp builder:/src/target .
+	docker stop builder
+	docker rm builder
+endef
 
 all: builder
 
