Copy /src directory from builder to host for coverage. Actually use CMAKE_BUILD_TYPE flag in Makefile

--- a/Makefile.docker
+++ b/Makefile.docker
@@ -14,6 +14,7 @@ define make
 	docker cp . builder:/src
 	-docker start -ai builder
 	docker cp builder:/src/target .
+	docker cp builder:/src/src .
 	docker stop builder
 	docker rm builder
 endef
