--- a/Makefile.docker
+++ b/Makefile.docker
@@ -12,11 +12,14 @@ define make
 		--workdir /src \
 		$(BUILDER_CONTAINER_NAME) sh -c "mkdir -p /tmp/.wine && make $1"
 	docker cp . builder:/src
-	-docker start -ai builder
+	-docker start -ai builder; \
+	echo $$? > buildall.exit
 	docker cp builder:/src/target .
 	docker cp builder:/src/src .
 	docker stop builder
 	docker rm builder
+	mv buildall.exit target
+	@exit `cat target/buildall.exit`
 endef
 
 all: builder
