Fix underflow issue in curves with PFS less than 64

--- a/src/wcc.c.in
+++ b/src/wcc.c.in
@@ -217,7 +217,7 @@ int WCC_ZZZ_SENDER_KEY(int sha, int date, octet *xOct, octet *piaOct, octet *pib
 
     char hv[6*WCC_PFS_ZZZ+1];
     octet HV= {0,sizeof(hv),hv};
-    char ht[WCC_PFS_ZZZ];
+    char ht[WCC_PAS];
     octet HT= {0,sizeof(ht),ht};
 
     BIG_XXX_fromBytes(x,xOct->val);
@@ -325,7 +325,7 @@ int WCC_ZZZ_SENDER_KEY(int sha, int date, octet *xOct, octet *piaOct, octet *pib
     mhashit(sha,0,&HV,&HT);
 
     OCT_empty(AESKeyOct);
-    OCT_jbytes(AESKeyOct,HT.val+HT.len-sha,WCC_PAS);
+    OCT_jbytes(AESKeyOct,HT.val,WCC_PAS);
 
     return 0;
 }
@@ -350,7 +350,7 @@ int WCC_ZZZ_RECEIVER_KEY(int sha, int date, octet *yOct, octet *wOct,  octet *pi
 
     char hv[6*WCC_PFS_ZZZ+1];
     octet HV= {0,sizeof(hv),hv};
-    char ht[WCC_PFS_ZZZ];
+    char ht[WCC_PAS];
     octet HT= {0,sizeof(ht),ht};
 
     BIG_XXX_fromBytes(y,yOct->val);
@@ -430,7 +430,7 @@ int WCC_ZZZ_RECEIVER_KEY(int sha, int date, octet *yOct, octet *wOct,  octet *pi
     mhashit(sha,0,&HV,&HT);
 
     OCT_empty(AESKeyOct);
-    OCT_jbytes(AESKeyOct,HT.val+HT.len-sha,WCC_PAS);
+    OCT_jbytes(AESKeyOct,HT.val,WCC_PAS);
 
     return 0;
 
