--- a/test/test_fp12_arithmetics_YYY.c.in
+++ b/test/test_fp12_arithmetics_YYY.c.in
@@ -284,6 +284,10 @@ int main(int argc, char** argv)
     const char* FP12_2line = "FP12_2 = ";
     const char* FP12_3line = "FP12_3 = ";
     const char* FP12_4line = "FP12_4 = ";
+    FP12_YYY FP_12_smul_y_dtype;
+    const char* FP12smul_y_dtypeline = "FP12smul_y_dtype = ";
+    FP12_YYY FP_12_smul_y_mtype;
+    const char* FP12smul_y_mtypeline = "FP12smul_y_mtype = ";
     FP12_YYY FP12conj;
     const char* FP12conjline = "FP12conj = ";
     FP12_YYY FP12usquare;
@@ -292,8 +296,10 @@ int main(int argc, char** argv)
     const char* FP12squareline = "FP12square = ";
     FP12_YYY FP12mul;
     const char* FP12mulline = "FP12mul = ";
-    FP12_YYY FP12smul;
-    const char* FP12smulline = "FP12smul = ";
+    FP12_YYY FP12smul_dtype;
+    const char* FP12smuldtypeline = "FP12smul_dtype = ";
+    FP12_YYY FP12smul_mtype;
+    const char* FP12smulmtypeline = "FP12smul_mtype = ";
     FP12_YYY FP12inv;
     const char* FP12invline = "FP12inv = ";
     BIG_XXX BIGsc[4];
@@ -332,13 +338,18 @@ int main(int argc, char** argv)
     }
 
     // Testing equal to zero function
+    if(FP12_YYY_iszilch(&FP12aux1))
+    {
+        printf("ERROR checking if FP12 is not zero\n");
+        exit(EXIT_FAILURE);
+    }
     FP4_YYY_zero(&FP4aux1);
     FP12_YYY_from_FP4(&FP12aux1,&FP4aux1);
-       if(FP12_YYY_equals(&FP12aux1,&FP12aux2) || !FP12_YYY_iszilch(&FP12aux1))
+    if(!FP12_YYY_iszilch(&FP12aux1))
     {
-        printf("ERROR comparing FP12s or checking if FP12 is zero\n");
+        printf("ERROR checking if FP12 is zero\n");
         exit(EXIT_FAILURE);
-    }    
+    }
 
     fp = fopen(argv[1], "r");
     if (fp == NULL)
@@ -390,6 +401,20 @@ int main(int argc, char** argv)
             linePtr = line + len;
             read_FP12_YYY(&FP_12[3],linePtr);
         }
+        // Read y for M-TYPE smul test
+        if (!strncmp(line,FP12smul_y_mtypeline, strlen(FP12smul_y_mtypeline)))
+        {
+            len = strlen(FP12smul_y_mtypeline);
+            linePtr = line + len;
+            read_FP12_YYY(&FP_12_smul_y_mtype,linePtr);
+        }
+        // Read y for D-TYPE smul test
+        if (!strncmp(line,FP12smul_y_dtypeline, strlen(FP12smul_y_dtypeline)))
+        {
+            len = strlen(FP12smul_y_dtypeline);
+            linePtr = line + len;
+            read_FP12_YYY(&FP_12_smul_y_dtype,linePtr);
+        }
         // Test FP12_YYY_conj
         if (!strncmp(line,FP12conjline, strlen(FP12conjline)))
         {
@@ -403,7 +428,7 @@ int main(int argc, char** argv)
                 printf("ERROR computing conjugate of FP12, line %d\n",i);
                 exit(EXIT_FAILURE);
             }
-        } 
+        }
         // Test multiplication and commutativity
         if (!strncmp(line,FP12mulline, strlen(FP12mulline)))
         {
@@ -450,31 +475,42 @@ int main(int argc, char** argv)
             FP12_YYY_usqr(&FP12aux1,&FP12aux1);
             FP12_YYY_reduce(&FP12aux1);
             FP12_YYY_norm(&FP12aux1);
-            
+
             if(!FP12_YYY_equals(&FP12aux1,&FP12usquare))
             {
                 printf("ERROR computing usquare of FP12, line %d\n",i);
                 exit(EXIT_FAILURE);
             }
-        } 
-        // Test s-multiplication and commutativity
-        // TODO Add support for M-TYPE test
-        if (!strncmp(line,FP12smulline, strlen(FP12smulline)))
+        }
+        // Test s-multiplication for D-TYPE
+        if (!strncmp(line,FP12smuldtypeline, strlen(FP12smuldtypeline)))
         {
-            len = strlen(FP12smulline);
+            len = strlen(FP12smuldtypeline);
             linePtr = line + len;
-            read_FP12_YYY(&FP12smul,linePtr);
+            read_FP12_YYY(&FP12smul_dtype,linePtr);
             FP12_YYY_copy(&FP12aux1,&FP_12[0]);
-            FP12_YYY_smul(&FP12aux1,&FP_12[1],D_TYPE);
-            FP12_YYY_copy(&FP12aux2,&FP_12[1]);
-            FP12_YYY_smul(&FP12aux2,&FP_12[0],D_TYPE);
+            FP12_YYY_smul(&FP12aux1,&FP_12_smul_y_dtype,D_TYPE);
             FP12_YYY_reduce(&FP12aux1);
             FP12_YYY_norm(&FP12aux1);
-            FP12_YYY_reduce(&FP12aux2);
-            FP12_YYY_norm(&FP12aux2);
-            if(!FP12_YYY_equals(&FP12aux1,&FP12smul) || !FP12_YYY_equals(&FP12aux2,&FP12smul))
+            if(!FP12_YYY_equals(&FP12aux1,&FP12smul_dtype))
             {
-                printf("ERROR computing multiplication (FP12_YYY_smul) of two FP12s, line %d\n",i);
+                printf("ERROR computing s-multiplication for D-TYPE, line %d\n",i);
+                exit(EXIT_FAILURE);
+            }
+        }
+        // Test s-multiplication for M-TYPE
+        if (!strncmp(line,FP12smulmtypeline, strlen(FP12smulmtypeline)))
+        {
+            len = strlen(FP12smulmtypeline);
+            linePtr = line + len;
+            read_FP12_YYY(&FP12smul_mtype,linePtr);
+            FP12_YYY_copy(&FP12aux1,&FP_12[0]);
+            FP12_YYY_smul(&FP12aux1,&FP_12_smul_y_mtype,M_TYPE);
+            FP12_YYY_reduce(&FP12aux1);
+            FP12_YYY_norm(&FP12aux1);
+            if(!FP12_YYY_equals(&FP12aux1,&FP12smul_mtype))
+            {
+                printf("ERROR computing s-multiplication for M-TYPE, line %d\n",i);
                 exit(EXIT_FAILURE);
             }
         }
@@ -488,7 +524,7 @@ int main(int argc, char** argv)
             FP12_YYY_inv(&FP12aux1,&FP12aux1);
             FP12_YYY_reduce(&FP12aux1);
             FP12_YYY_norm(&FP12aux1);
-            
+
             if(!FP12_YYY_equals(&FP12aux1,&FP12inv))
             {
                 printf("ERROR computing inverse of a FP12, line %d\n",i);
