Fix randstr. Use more specific success message in wcc invalid points test. Randstr: * Avoid mid string '\0' in randstr output * Use octets * write directly to octet to better keep track of length This solves an issue where the Ids used in tests were all the empty string.

--- a/test/test_wcc_invalid_points_ZZZ.c.in
+++ b/test/test_wcc_invalid_points_ZZZ.c.in
@@ -240,6 +240,6 @@ int main()
     }
 
     KILL_CSPRNG(&RNG);
-    printf("SUCCESS\n");
+    printf("SUCCESS! WCC INVALID POINT HANDLING TEST\n");
     return 0;
 }
