--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -186,6 +186,8 @@ foreach(curve ${AMCL_CURVE})
       amcl_curve_test(${curve} test_wcc_sha512_${TC} test_wcc_ZZZ.c.in        amcl_wcc_${TC} "SUCCESS" "sha512")
       amcl_curve_test(${curve} test_wcc_random_${TC} test_wcc_random_ZZZ.c.in amcl_wcc_${TC} "SUCCESS")
       amcl_curve_test(${curve} test_wcc_invalid_points_${TC} test_wcc_invalid_points_ZZZ.c.in amcl_wcc_${TC} "SUCCESS")
+      amcl_curve_test(${curve} test_wcc_bad_sender_key_${TC} test_wcc_bad_sender_key_ZZZ.c.in amcl_wcc_${TC} "SUCCESS")
+      amcl_curve_test(${curve} test_wcc_bad_receiver_key_${TC} test_wcc_bad_receiver_key_ZZZ.c.in amcl_wcc_${TC} "SUCCESS")
     endif()
 
   endif()
