--- a/test/test_wcc_bad_sender_key_ZZZ.c.in
+++ b/test/test_wcc_bad_sender_key_ZZZ.c.in
@@ -23,7 +23,7 @@
  * under the License.
  */
 
-/* Test WCC with two TAs and time permits for random values */
+/* Test WCC using the wrong sender key, i.e. a key generated from a different identity */
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -163,6 +163,9 @@ int main()
         OCT_output(&MS);
 #endif
 
+
+        /* Generate key material for Alice, Bob and Eve */
+
         // Alice's ID
         rand_str(&IdA,&RNG);
 #ifdef DEBUG
@@ -225,6 +228,9 @@ int main()
         printf("TA Eve's receiver key: ");
         OCT_output(&EKeyG1);
 #endif
+
+
+        /* TEST RUN: Check that the protocol is working when using the right sender key */
 
 #ifdef DEBUG
         printf("Control Run. Alice:\n");
@@ -402,6 +408,9 @@ int main()
             printf("FAILURE Control run keys do not match. OCT_comp(&K1,&K2)\n");
             return 1;
         }
+
+
+        /* BAD KEY RUN: Check that someone with the wrong sender key obtains a different session key */
 
 #ifdef DEBUG
         printf("Bad key run. Eve:\n");
